# yasirsoleh.my

./: README.md  deno.json
.github/workflows/: deploy.yml
blog/: .env.example  Dockerfile  README.md
blog/.sqlx/: query-51463971cbaef88b52f0a031daa43c1dafe3addc90ac12f1dffe34e8f26b191a.json  query-9cca7a890f0a8194c02d8d1dada3563bfebe76b0143e2729cb761fe9b0990a1d.json  query-cf56b8a589e84b49d4b98ee281be10c76ede6b4e88efa4d591268d84bb5aac0e.json  query-e65679b2f7fe2076e225300911828cb6d2a3a395140632411277d9c8e8240d01.json  query-fb80af212265bd7ac1169a59fbea506ea795dd3c47748ce68429bfddbc4bea3f.json
blog/src/: main.rs
deployment/: .gitignore  cluster-issuer.md  cluster-issuer.yaml  keycloak.yaml  landing.md  landing.yaml  nginx.yaml  postgres.md  postgres.yaml  registry.md  registry.yaml  whoami.yaml
landing/: Cargo.toml  Dockerfile  README.md
landing/.sqlx/: query-21ab5570399e1cbf916c2d5fa37957300fc25a92c12eec0330fc316f66c7c5e8.json  query-44a0fd182be94c842043dec312bd8e95fa04743ad71a1200ff73b027825e4cb5.json  query-af7f3a5546c85862537dc26db806c68a79e36f38b11a24437adbf0734ad33dcb.json
landing/src/: main.rs
landing/src/db/migrations/: 20250823074654_initial_migrations.sql
landing/src/db/repositories/: accounts.rs  utils.rs
landing/src/frontend/: .cta.json  package.json
landing/src/frontend/src/: main.tsx  styles.css
landing/src/frontend/src/routes/: _main.index.tsx  _main.login.tsx  _main.posts.$postId.edit.tsx  _main.posts.index.tsx  _main.register.tsx  _main.tsx
landing/src/routes/: accounts.rs  mod.rs  posts.rs
routes/: _404.tsx  _app.tsx  index.tsx
(+25 files in other folders)
